Set player kill when OOB

--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -163,9 +163,9 @@ InputAction=
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.C1C838AA465C8F8E79A2ACB12EDDBDF6
 StaticMeshComponent=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeSpatialHash=
 BP_Enemy_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-SkeletalMeshComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+SkeletalMeshComponent=
 CapsuleComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 SceneComponent=
 Blockout_Box_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
@@ -303,7 +303,7 @@ BP_Weapon_Component_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.
 W_SpellWheel_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 BP_Platform_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 BillboardComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-BoxComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+BoxComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,WorldSettings.WorldPartitionSetup.RuntimeHash,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 W_SpawnWidget_C=
 Actor=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 PlayerStart=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
@@ -351,7 +351,7 @@ BP_SkillPoint_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collis
 W_SkillPoint_ObtentionNotify_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -402,12 +402,12 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/ArenaTest
+LastLevel=/Game/Maps/FirstPersonMap
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
@@ -547,7 +547,7 @@ MaterialExpressionAppend3Vector="\"Object\" "
 MaterialExpression="\"Object\" "
 MaterialExpressionConstant3Vector="\"Object\" "
 MaterialExpressionConstant="\"Object\" "
-BoxComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+BoxComponent="\"Object\" "
 Actor="\"Object\" "
 Portal_C=
 ArrowComponent="\"Object\" "
@@ -668,8 +668,8 @@ HorizontalBox="\"Object\" "
 PawnNoiseEmitterComponent="\"Object\" "
 DmgTypeBP_Environmental_C="\"Object\" "
 DamageType="\"Object\" "
-WorldSettings="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Lightmass.LightmassSettings.EnvironmentColor\" \"Object.Audio.DefaultReverbSettings\" "
-Info="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Lightmass.LightmassSettings.EnvironmentColor\" \"Object.Audio.DefaultReverbSettings\" "
+WorldSettings="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Lightmass.LightmassSettings.EnvironmentColor\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Broadphase.BroadphaseSettings.MBPBounds\" \"Object.Broadphase.BroadphaseSettings.MBPOuterBounds\" \"Object.Audio.DefaultReverbSettings\" "
+Info="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Lightmass.LightmassSettings.EnvironmentColor\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Broadphase.BroadphaseSettings.MBPBounds\" \"Object.Broadphase.BroadphaseSettings.MBPOuterBounds\" \"Object.Audio.DefaultReverbSettings\" "
 SoundCue="\"Object\" "
 SoundBase="\"Object\" "
 SoundNodeWavePlayer="\"Object\" "
@@ -682,7 +682,6 @@ Border="\"Object\" \"Object.Content.Padding\" \"Object.Layout.Slot\" \"Object.Re
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemyProjectile.BP_EnemyProjectile
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_Weapon_Component.BP_Weapon_Component
 
@@ -2482,22 +2481,23 @@ Border.Navigation=True
 Border.Localization=True
 Border.Events=True
 W_SkillPoint_ObtentionNotify_C.Events=True
+WorldSettings.WorldPartition=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/ArenaTest
-MRUItem1=/Game/Maps/FirstPersonMap
-MRUItem2=/Game/Blueprints/BP_SkillPoint
-MRUItem3=/Game/Widget/W_SkillPoint_ObtentionNotify
-MRUItem4=/Game/Widget/W_Main
-MRUItem5=/Game/Widget/Menu/W_Menu
-MRUItem6=/Game/Widget/Menu/W_Options
-MRUItem7=/Game/Blueprints/BP_Objective
-MRUItem8=/Game/UserExperience/Widgets/UI_SkillPoint_ObtentionNotify
-MRUItem9=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem10=/Game/Blueprints/Enemies/BP_Enemy
-MRUItem11=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem12=/Game/Widget/Menu/W_Pause
-MRUItem13=/Game/Blueprints/Enemies/BP_EnemyProjectile
+MRUItem0=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem2=/Game/Blueprints/Enemies/BP_EnemyProjectile
+MRUItem3=/Game/Maps/ArenaTest
+MRUItem4=/Game/Maps/FirstPersonMap
+MRUItem5=/Game/Blueprints/BP_SkillPoint
+MRUItem6=/Game/Widget/W_SkillPoint_ObtentionNotify
+MRUItem7=/Game/Widget/W_Main
+MRUItem8=/Game/Widget/Menu/W_Menu
+MRUItem9=/Game/Widget/Menu/W_Options
+MRUItem10=/Game/Blueprints/BP_Objective
+MRUItem11=/Game/UserExperience/Widgets/UI_SkillPoint_ObtentionNotify
+MRUItem12=/Game/Blueprints/Enemies/BP_Enemy
+MRUItem13=/Game/Widget/Menu/W_Pause
 MRUItem14=/Game/Audio/AudioSettings/Atenuation_Main
 MRUItem15=/Game/Audio/SFX/Capacity/Counter/Cue_Counter
 MRUItem16=/Game/CustomGameInstance
@@ -2648,8 +2648,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/BP_SkillPoint.BP_SkillPoint;
 RecentlyPlaced=/Game/Blueprints/BP_KillPlayer.BP_KillPlayer;
+RecentlyPlaced=/Game/Blueprints/BP_SkillPoint.BP_SkillPoint;
 RecentlyPlaced=/Game/Blueprints/Enemies/BP_Enemies.BP_Enemies;
 RecentlyPlaced=/Game/Blueprints/BP_SkillPoints.BP_SkillPoints;
 RecentlyPlaced=/Game/Blueprints/BP_PlatformPieces.BP_PlatformPieces;
@@ -3780,8 +3780,8 @@ bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
 
 [MRU]
-MRUItem0=/Game/Maps/ArenaTest
-MRUItem1=/Game/Maps/FirstPersonMap
+MRUItem0=/Game/Maps/FirstPersonMap
+MRUItem1=/Game/Maps/ArenaTest
 MRUItem2=/Game/Maps/Menu
 MRUItem3=/Game/FirstPerson/Maps/FirstPersonMap
 
@@ -4100,7 +4100,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [MaterialInstanceEditor]
 bShowGrid=True
